# rust-cli-template

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.template.md  init.sh
.github/workflows/: ci.yml  release.yml  vitepress.yml
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/guide/: getting-started.md
python/: pyproject.toml
src/: main.rs
