[package]
name = "{{PROJECT_NAME}}"
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "{{PROJECT_DESCRIPTION}}"
authors = ["{{AUTHOR_NAME}} <{{AUTHOR_EMAIL}}>"]
repository = "https://github.com/{{GITHUB_USERNAME}}/{{REPO_NAME}}"
homepage = "https://github.com/{{GITHUB_USERNAME}}/{{REPO_NAME}}"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
