[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "{{PROJECT_NAME}}"
version = "0.0.0"
description = "{{PROJECT_DESCRIPTION}}"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "{{AUTHOR_NAME}}", email = "{{AUTHOR_EMAIL}}" }]

[tool.maturin]
features = ["pyo3/extension-module"]
